k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: app-deployment 
spec:
  replicas: 1 
  selector:
    matchLabels: 
      component: api # deployment controller looks for pods with redis label
  template:
    metadata:
      labels:
        component: api # this pod has a label of labels.component 
    spec:
      containers:
        - name: api 
          image: nnethercott/celery_flask_api
          ports:
            - containerPort: 5000
