k8s/app-cluster-ip-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: app-cluster-ip 
spec:
  type: ClusterIP 
  selector:
    component: api 
  ports:
    - port: 5000 #conecting to pod, linked to pod spec `containerPort`
      targetPort: 5000 #where service listens to for incoming traffic
