k8s/worker-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: worker
  ports:
    - port: 8000 #conecting to pod, linked to pod spec `containerPort`
      targetPort: 8000 #where service listens to for incoming traffic
